@startuml fitness


entity User{
    *Id <<PK>>
    ---
    *Name
    *PhoneNumber
    *MembershipId <<FK>>
    TrainerId <<FK>>
}

entity Workout{
    *Id <<PK>>
    ---
    *NumOfExercises
    *WorkoutDuration
    *ExercisesId <<FK>>
    Description
} 

entity Exercises{
    *Id <<PK>>
    ---
    *Name
    *MuscleGroup
    *Sets
    *Repetitions
    Description
}

entity Trainer{
    *Id <<PK>>
    ---
    *Name
    *PhoneNumber
    Description
}

entity Membership{
    *Id <<PK>>
    ---
    *DateOfPurchase
    *DateOfExpiry
    *Price
}

entity UserWorkout{
    *UserId <<FK>>
    *WorkoutId <<FK>>
    ---
    *Date
}


Workout||---o{UserWorkout
User ||---o{ UserWorkout
Exercises ||..o{ Workout
Trainer ||..o{ User
Membership ||..|| User

@enduml
Footer